--- a/cmd/tileserver/static/index.html
+++ b/cmd/tileserver/static/index.html
@@ -7,12 +7,8 @@
     <meta name="author" content="">
     <title>Map</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-          integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-          crossorigin=""/>
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/static/css/leaflet.css"/>
 </head>
 
 <body>
@@ -21,10 +17,12 @@
         <div class="row">
             <div class="col my-1">
                 <span class="badge bg-success">zoom: {{ zoom }}</span>
+                <span class="badge bg-success">tile zoom: {{ zoom + dz }}</span>
                 <span class="badge bg-success">tiles: {{ ts }}</span>
                 <button type="button" class="btn btn-secondary" v-on:click="copy_up();">From upper</button>
                 <button type="button" class="btn btn-secondary" v-on:click="print();">Print</button>
                 <button type="button" class="btn btn-secondary" v-on:click="clear();">Clear</button>
+                <button type="button" class="btn btn-secondary" v-on:click="clear_zoom();">Clear zoom</button>
                 <button type="button" class="btn btn-secondary" v-on:click="redraw_all();">Redraw</button>
             </div>
         </div>
@@ -34,14 +32,9 @@
     </div>
 </div>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-
-<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-        integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-        crossorigin=""></script>
-<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+<script src="/static/js/bootstrap.bundle.min.js"></script>
+<script src="/static/js/leaflet.js"></script>
+<script src="/static/js/vue.js"></script>
 
 <script src="/static/js/main.js"></script>
 </html>
